# mho_launcher

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ag_buffer.h  build.sh  cs_cmd.h  memory.h  mho_launcher.cpp  mho_launcher_lib.cpp  mho_launcher_lib.h  mho_types.h  tenproxy_tcls_sharedmememory.h  toolchain-mingw32.cmake  util.h
.github/workflows/: build.yml
ag_mho_dll/: backtrace_util.cpp  backtrace_util.h  dllmain.cpp  dump_module.cpp  dump_module.h  hook_table.h  hooks_crygame.cpp  hooks_crygame.h  hooks_mho_handlers.cpp  hooks_mho_handlers.h  hooks_mhoclient.cpp  hooks_mhoclient.h  hooks_ods.cpp  hooks_ods.h  hooks_protocalhandler.cpp  hooks_protocalhandler.h  hooks_tenproxy.cpp  hooks_tenproxy.h  hooks_tersafe.cpp  hooks_tersafe.h  log.cpp  log.h  patch.h
ag_mho_exe/: main.cpp  shared_memory.h
bugtrace_dll/: bugtrace.c  bugtrace.def
common/: ag_buffer.h  ag_ini.h  compat.h  hex_dump.h  str_util.h  win_util.h
concurrentqueue/: concurrentqueue.h
data/: internal_notification_ids.h
dll/: dll_export.h  dllmain.cpp  hooks_crygame.cpp  hooks_mhoclient.cpp  hooks_protocalhandler.h  log.cpp
launcher/: main.cpp
pyghidra_mcp_projects/my_project.rep/: project.prp
tersafe_dll/: tersafe.c  tersafe.def
